--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,46 @@
 /*  your css code here. If applicable */
+body{
+	background-color: #f5f5f5;
+}
+.header
+{
+	text-align:center;
+	background-color:#011e29;
+	color:white;
+	padding:10px;
+}
+.latest-news-section{
+	background-color:white;
+	padding:10px;
+	width:170px;
+	border-radius:10px;
+	margin:10px;
+	
+}
+.main-art{
+	text-align:center;
+	width:200px;
+	background-color:white;
+	border-radius:10px;
+	margin-top:10px;
+	
+	
+	
+}
+.box{
+	display:flex;
+	align-items:flex-start;
+
+	
+}
+.pictorial-news-section{
+	text-align:center;
+	background-color:white;
+	border-radius:10px;
+	margin:10px;
+	padding:10px;
+	width:200px;
+	display:flex;
+	flex-direction:column;
+	gap:10px;
+}
